# sotes-mod-loader

./: .gitignore  LICENSE  README.md  flake.nix  loader.toml  oss_loader.cfg.example
.github/workflows/: nightly.yml
core/: Makefile  config.c  config.h  crashlog.c  crashlog.h  ddraw_present.cpp  ddraw_present.h  executor.c  executor.h  game_bindings.c  game_bindings.h  hooks.c  hooks.h  loader.c  loader_internal.h  lua_host.c  lua_host.h  mem.c  mem.h  native_bridge.c  native_bridge.h  oss_mod_api.h  prof.c  prof.h  profile.c  profile.h  sotes_autoload.c  sotes_autoload.h  sotes_bindings.c  sotes_bindings.h  ui.cpp  ui.h  version.def  voice.c  voice.h
core/test/: exec_test.c  exec_test_mod.lua  hook_typed_test.c  hook_typed_test_mod.lua  host_stub.c  lj_smoke.c  native_mod_test.c  ui_smoke.c
docs/: DESIGN.md  HANDOFF.md  MOD-FORMAT.md  REGISTRY.md  TESTING.md
examples/config_demo/: init.lua  mod.toml
examples/early_probe/: Makefile  early_probe.c
examples/hello/: init.lua  mod.toml
examples/hook_test/: init.lua
examples/hook_typed/: init.lua
examples/mouse_probe/: init.lua
examples/native_hello/: Makefile  native_hello.c
examples/probe/: init.lua
examples/probe_live/: init.lua
examples/roster_probe/: init.lua  mod.toml
examples/statblock_probe/: init.lua  mod.toml
examples/ui_demo/: init.lua  mod.toml
launcher/: .gitignore  Cargo.toml  DESIGN.md  README.md
launcher/core/: Cargo.toml
launcher/core/examples/: inspect.rs  install_demo.rs
launcher/core/src/: cfg.rs  gamedir.rs  install.rs  launcher_cfg.rs  lib.rs  modconfig.rs  registry.rs  verify.rs
launcher/core/tests/: real_sources.rs
launcher/gui/: Cargo.toml
launcher/gui/src/: main.rs
profiles/: sotes_en.lua
tools/: dev-launch.sh  stage.sh  win-fingerprint.ps1
