# The launcher is a Cargo workspace, split so the plumbing is testable on Linux and
# only the GUI needs the Windows cross-toolchain (see DESIGN.md "Tech decision"):
#
#   core/  sml-core — registry / verify / modconfig / cfg  (pure logic, unit-tested here)
#   gui/   sml-gui  — the eframe app  (added in Stage 2; a thin layer over sml-core)
#
# `gui` is intentionally NOT a default member yet, so `cargo test` on the plumbing stays
# fast and needs no eframe / x86_64-pc-windows-gnu toolchain.
[workspace]
resolver = "2"
members = ["core"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.8", features = ["preserve_order"] }
sha2 = "0.10"
hex = "0.4"
anyhow = "1"
